# DuckLearn

./: .coverage  .gitignore  .testmondata  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/config/: +page.svelte
scripts/: Code_Quality.py  Licenses.py  Run_Build.py  Setup.py  Tests.py  __init__.py
src/: app.py  main.py
src/config/: __init__.py  config_duckdb.py  config_load_save.py
src/ducklearn/: app.py
src/ducklearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/routes/: routes_config_duckdb.py
tests/: conftest.py  test_app.py
tests/config/: test_config_load_save.py
